--- a/net-core-auth/project.json
+++ b/net-core-auth/project.json
@@ -13,7 +13,8 @@
     "Microsoft.Extensions.Configuration.Json":"1.0.0",
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "Dapper": "1.50.2"
+    "Dapper": "1.50.2",
+    "Newtonsoft.Json" : "9.0.1"
   },
   "frameworks": {
     "netcoreapp1.1": {
